Should check link-related bits before reusing style context for root element.  (Bug 652268)  r=bzbarsky